Fix to CSS issue with Type & Agency Buttons being too large

--- a/sass/components/_accordin.scss
+++ b/sass/components/_accordin.scss
@@ -57,7 +57,7 @@
 }
 
 .block {
-    padding: 1.25rem;
+    padding: .25rem;
 }
 
 .u-margin-bottom-s {
